src/test/deca/context/valid/provided/test12.deca
class A{
    protected int x = 1;
    protected boolean b = true;
    protected float y = -2.5;
    int getX(){
        return x;
    }
    boolean getB(){
        return b;
    }
    float getY(){
        return y;
    }
}
{
    int x = 5;
    float y = -26516.2;
    A a = new A();
    if (a.getX() == x){
        print("OK");
    }
    else if (!a.getB()){
        print("pas ok");
    }
    else{
        print("nooooooooon");
        println(a.getY(), a.getX());
    }
}