src/test/deca/context/invalid/provided/testi36.deca
//Resultats :
//Erreur contextuelle
//Ligne 9 : Wrong signature for method : groosse

class A{
    void groosse(float x, int y, boolean t){}
}
{
    A a = new A();
    a.groosse(2, 2, 1);
}